--- a/resources/views/pages/frontend/html/blog.html
+++ b/resources/views/pages/frontend/html/blog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Our Story | UINWOLC</title>
+  <title>Blog | UINWOLC</title>
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
@@ -22,11 +22,11 @@
 <header class="header-menu-box-shadow">
   <div class="container">
     <div class="row">
-      
+
       <div class="header-menu-uinw d-flex flex-wrap align-items-center justify-content-center">
 
         <div class="col-lg-7">
-          <nav class="navbar navbar-expand-lg navbar-dark"> 
+          <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -79,37 +79,131 @@
 </header>
 <!-- Header End -->
 
-<!-- Our Story -->
-<section class="sub-how-we-help-bg">
+<!-- Header inner Title -->
+<section class="header-banner-box">
   <div class="container">
     <div class="row">
 
-      <div class="col-lg-8 offset-lg-2">
-        <div class="sub-our-story-title">
-          <h1>Martin Basiri’s TOEFL® Story</h1>
-          <p>Why are we helping with English exams and other vouchers?</p>
+      <div class="header-abroad-main">
+        <div class="col-lg-6">
+          <div class="header-abroad-content">
+            <h1>Uniwolc Blog</h1>
+            <p>Tips, Advice, And Updates To Help You Across Every Step Of The Study Abroad Journey.</p>
+            <a href="javascript:;">View All Articles</a>
+          </div>
         </div>
-        <div class="sub-our-story-img-blog">
-          <img src="assets/images/our-story-blog/our-story-blog.jpg" alt="" />
-        </div>
-        <div class="sub-our-story-blog-content">
-          <h3>It’s what we would have wanted.</h3>
-          <p>In 2009, Martin was still a 21 year old engineering student in Shiraz, Iran. Like many, he was smart, hard-working and filled with dreams of being an entrepreneur. Martin was your typical engineer. Great at math - excelled at technology - but perhaps not the most confident socially. </p>
-          <p>Martin knew he had to study abroad to maximize his chance to achieve his dream of opening a world changing business. After lots of research, finding the right school, the right country and the right program, he began to prepare to take the TOEFL exam.</p>
-          <p>Martin studied and studied. He spent months practicing his English speaking skills, he took mock test after mock test and even researched how the TOEFL test was structured. Martin didn't have a lot of money, so he worked and saved for the test himself. Since there were no test centers in Shiraz at that time, Martin took a 15 hour overnight bus from Shiraz to Tehran, the nearest test center. The bus was cramped, the road was bumpy, and he could not even sleep on the bus. By the time he arrived, he was exhausted and didn’t feel like himself. He took the exam and did the best he could.</p>
-          <p>Unfortunately, he didn’t do well.</p>
-          <p>His TOEFL score was too low - his dream of studying abroad seemed gone forever. Martin was back to square one. Disappointed, but determined, Martin had no choice but to try again. This time he spent even more time preparing, more time studying, and this time he was more careful with his travel plans. He saved up once again.</p>
-          <p>Success! Martin tried again and succeeded. But to this day, he still remembers vividly how hard this part in his journey was. His experience has crafted our mission. We are here to make the study abroad journey easier for students everywhere. Today, we are making English tests more affordable and more accessible than ever before. All so you can have an easier journey.</p>
-          <p>“I have committed my life to making education accessible for everyone. I know just how hard it can be. From one international student to another, let nothing get in the way of achieving your goals.”</p>
-          <p><strong>Martin Basiri</strong></p>
-          <p>CEO and Co-Founder of UNIWOLC</p>
+
+        <div class="col-lg-6">
+          <div class="header-img-abroad">
+            <img src="assets/images/inner-banner/blogs-banner.png" alt="" />
+          </div>
         </div>
       </div>
 
     </div>
   </div>
 </section>
-<!-- Our Story End -->
+<!-- Header inner Title End -->
+
+<!-- Latest Resources -->
+<section class="sub-how-we-help-bg">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-12">
+        <div class="sub-uniwolc-title sub-blog-pt-pb">
+          <h2>Recent Articles</h2>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="main-universities-blog">
+          <div class="sub-img-universities">
+            <img src="assets/images/blogs/02-blog.png" alt="" />
+          </div>
+          <div class="sub-content-universities">
+            <h3><a href="javascript:;">Quiz: What Length Program Should You Choose For Study Abroad In Canada?</a></h3>
+            <p>DECEMBER 12, 2022</p>
+            <a href="javascript:;">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="main-universities-blog">
+          <div class="sub-img-universities">
+            <img src="assets/images/blogs/02-blog.png" alt="" />
+          </div>
+          <div class="sub-content-universities">
+            <h3><a href="javascript:;">Quiz: What Length Program Should You Choose For Study Abroad In Canada?</a></h3>
+            <p>DECEMBER 12, 2022</p>
+            <a href="javascript:;">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="main-universities-blog">
+          <div class="sub-img-universities">
+            <img src="assets/images/blogs/02-blog.png" alt="" />
+          </div>
+          <div class="sub-content-universities">
+            <h3><a href="javascript:;">Quiz: What Length Program Should You Choose For Study Abroad In Canada?</a></h3>
+            <p>DECEMBER 12, 2022</p>
+            <a href="javascript:;">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="main-universities-blog">
+          <div class="sub-img-universities">
+            <img src="assets/images/blogs/02-blog.png" alt="" />
+          </div>
+          <div class="sub-content-universities">
+            <h3><a href="javascript:;">Quiz: What Length Program Should You Choose For Study Abroad In Canada?</a></h3>
+            <p>DECEMBER 12, 2022</p>
+            <a href="javascript:;">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="main-universities-blog">
+          <div class="sub-img-universities">
+            <img src="assets/images/blogs/02-blog.png" alt="" />
+          </div>
+          <div class="sub-content-universities">
+            <h3><a href="javascript:;">Quiz: What Length Program Should You Choose For Study Abroad In Canada?</a></h3>
+            <p>DECEMBER 12, 2022</p>
+            <a href="javascript:;">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="main-universities-blog">
+          <div class="sub-img-universities">
+            <img src="assets/images/blogs/02-blog.png" alt="" />
+          </div>
+          <div class="sub-content-universities">
+            <h3><a href="javascript:;">Quiz: What Length Program Should You Choose For Study Abroad In Canada?</a></h3>
+            <p>DECEMBER 12, 2022</p>
+            <a href="javascript:;">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-12">
+        <div class="sub-explore-btn">
+          <a class="sub-get-started-btn" href="javascript:;">See More Articles</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- Latest Resources End -->
 
 <!-- Footer -->
 <footer class="default-overlay">
@@ -238,24 +332,24 @@
   <script>
     $(document).ready(function() {
     // executes when HTML-Document is loaded and DOM is ready
-    
-    // breakpoint and up  
+
+    // breakpoint and up
     $(window).resize(function(){
-      if ($(window).width() >= 980){  
+      if ($(window).width() >= 980){
 
           // when you hover a toggle show its dropdown menu
           $(".navbar .dropdown-toggle").hover(function () {
              $(this).parent().toggleClass("show");
-             $(this).parent().find(".dropdown-menu").toggleClass("show"); 
+             $(this).parent().find(".dropdown-menu").toggleClass("show");
            });
 
             // hide the menu when the mouse leaves the dropdown
           $( ".navbar .dropdown-menu" ).mouseleave(function() {
-            $(this).removeClass("show");  
+            $(this).removeClass("show");
           });
-      
+
         // do something here
-      } 
+      }
     });
   });
   </script>
