--- a/resources/views/pages/frontend/html/our-story.html
+++ b/resources/views/pages/frontend/html/our-story.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Register | UINWOLC</title>
+    <title>Our Story | UINWOLC</title>
 
-    <link rel="stylesheet" href="{{ asset('assets/frontend/assets/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('assets/frontend/assets/css/style.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('assets/frontend/assets/css/style-timeline.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('assets/frontend/assets/css/responsive.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style-timeline.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/responsive.css" rel="stylesheet">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -32,8 +32,7 @@
 
                     <div class="col-lg-7">
                         <nav class="navbar navbar-expand-lg navbar-dark">
-                            <a class="navbar-brand" href="index.html"><img
-                                    src="{{ asset('assets/frontend/assets/images/logo.png') }}" alt="" /></a>
+                            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="" /></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation"> <span
@@ -92,146 +91,57 @@
     </header>
     <!-- Header End -->
 
-    <!-- Login -->
-    <section class="sub-login-bg">
+    <!-- Our Story -->
+    <section class="sub-how-we-help-bg">
         <div class="container">
             <div class="row">
 
-                <div class="col-lg-12">
-                    <div class="sub-login-welcome-text">
-                        <h3>Welcome</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                            tincidunt ut laoreet.</p>
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="sub-our-story-title">
+                        <h1>Martin Basiri’s TOEFL® Story</h1>
+                        <p>Why are we helping with English exams and other vouchers?</p>
                     </div>
-                </div>
-
-                <div class="col-lg-12">
-                    <div class="sub-login-white-bg">
-                        <div class="row">
-                            <div class="col-lg-6 offset-lg-3">
-                                <div class="sub-login-content">
-                                    <h4>Register</h4>
-                                </div>
-                                <div class="sub-login-form">
-                                    <form>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><i class="fa-solid fa-user"></i>
-                                                    </div>
-                                                </div>
-                                                <input type="text" class="form-control" placeholder="First Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><i class="fa-solid fa-user"></i>
-                                                    </div>
-                                                </div>
-                                                <input type="text" class="form-control" placeholder="Last Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><i class="fa-solid fa-envelope"></i>
-                                                    </div>
-                                                </div>
-                                                <input type="text" class="form-control" placeholder="Email">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><i class="fa-solid fa-lock"></i>
-                                                    </div>
-                                                </div>
-                                                <input type="text" class="form-control" placeholder="Password">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><i class="fa-solid fa-lock"></i>
-                                                    </div>
-                                                </div>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Confirm Password">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><i class="fa-solid fa-globe"></i>
-                                                    </div>
-                                                </div>
-                                                <select class="form-control" id="exampleFormControlSelect1">
-                                                    <option>Nationality</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <div class="input-group-text"><img width="20px"
-                                                            src="{{ asset('assets/frontend/assets/images/canada-contact.png') }}"
-                                                            alt="" />
-                                                    </div>
-                                                </div>
-                                                <input type="text" class="form-control"
-                                                    placeholder="+1 204-234-5678">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="form-check mt-4">
-                                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                                <label class="form-check-label" for="exampleCheck1">I have read and
-                                                    agree to the Terms and Conditions and the Privacy and Cookies
-                                                    Policy*.</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12 text-center">
-                                            <button class="btn btn-primary" type="submit">Create Account</button>
-                                        </div>
-                                    </form>
-                                </div>
-
-                                <div class="sub-login-social-or">
-                                    <span>or</span>
-                                </div>
-
-                                <div class="col-lg-12">
-                                    <p class="sub-already-login-btn">Already have an account? <a
-                                            href="javascript:;">Login</a></p>
-                                </div>
-
-                                <div class="sub-login-social-main">
-
-                                    <a class="sub-login-social-box" href="javascript:;">
-                                        <span><i class="fa-brands fa-google"></i></span>
-                                        <p>Log In with Google</p>
-                                    </a>
-                                    <a class="sub-login-social-box" href="javascript:;">
-                                        <span><i class="fa-brands fa-apple"></i></span>
-                                        <p>Log In with Apple</p>
-                                    </a>
-                                    <a class="sub-login-social-box" href="javascript:;">
-                                        <span><i class="fa-brands fa-facebook-f"></i></span>
-                                        <p>Log In with Facebook</p>
-                                    </a>
-
-                                </div>
-
-                            </div>
-                        </div>
+                    <div class="sub-our-story-img-blog">
+                        <img src="assets/images/our-story-blog/our-story-blog.jpg" alt="" />
+                    </div>
+                    <div class="sub-our-story-blog-content">
+                        <h3>It’s what we would have wanted.</h3>
+                        <p>In 2009, Martin was still a 21 year old engineering student in Shiraz, Iran. Like many, he
+                            was smart, hard-working and filled with dreams of being an entrepreneur. Martin was your
+                            typical engineer. Great at math - excelled at technology - but perhaps not the most
+                            confident socially. </p>
+                        <p>Martin knew he had to study abroad to maximize his chance to achieve his dream of opening a
+                            world changing business. After lots of research, finding the right school, the right country
+                            and the right program, he began to prepare to take the TOEFL exam.</p>
+                        <p>Martin studied and studied. He spent months practicing his English speaking skills, he took
+                            mock test after mock test and even researched how the TOEFL test was structured. Martin
+                            didn't have a lot of money, so he worked and saved for the test himself. Since there were no
+                            test centers in Shiraz at that time, Martin took a 15 hour overnight bus from Shiraz to
+                            Tehran, the nearest test center. The bus was cramped, the road was bumpy, and he could not
+                            even sleep on the bus. By the time he arrived, he was exhausted and didn’t feel like
+                            himself. He took the exam and did the best he could.</p>
+                        <p>Unfortunately, he didn’t do well.</p>
+                        <p>His TOEFL score was too low - his dream of studying abroad seemed gone forever. Martin was
+                            back to square one. Disappointed, but determined, Martin had no choice but to try again.
+                            This time he spent even more time preparing, more time studying, and this time he was more
+                            careful with his travel plans. He saved up once again.</p>
+                        <p>Success! Martin tried again and succeeded. But to this day, he still remembers vividly how
+                            hard this part in his journey was. His experience has crafted our mission. We are here to
+                            make the study abroad journey easier for students everywhere. Today, we are making English
+                            tests more affordable and more accessible than ever before. All so you can have an easier
+                            journey.</p>
+                        <p>“I have committed my life to making education accessible for everyone. I know just how hard
+                            it can be. From one international student to another, let nothing get in the way of
+                            achieving your goals.”</p>
+                        <p><strong>Martin Basiri</strong></p>
+                        <p>CEO and Co-Founder of UNIWOLC</p>
                     </div>
                 </div>
 
             </div>
         </div>
     </section>
-    <!-- Login End -->
+    <!-- Our Story End -->
 
     <!-- Footer -->
     <footer class="default-overlay">
@@ -240,8 +150,7 @@
 
                 <div class="col-6 col-lg-2">
                     <div class="sub-footer-logo">
-                        <a href="javascript:;"><img src="{{ asset('assets/frontend/assets/images/footer-logo.png') }}"
-                                alt="" /></a>
+                        <a href="javascript:;"><img src="assets/images/footer-logo.png" alt="" /></a>
                         <div class="footer-address-text">
                             <p>101 Frederick St,<br /> Kitchener,<br /> ON N2H 6R3</p>
                         </div>
@@ -358,27 +267,27 @@
     <!-- Play Video End -->
 
     <!-- JavaScript -->
-    <script src="{{ asset('assets/frontend/assets/js/jquery-3.2.1.slim.min.js') }}"></script>
-    <script src="{{ asset('assets/frontend/assets/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('assets/frontend/assets/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ asset('assets/frontend/assets/js/our-partners.js') }}"></script>
+    <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/our-partners.js"></script>
     <!-- Header Menu -->
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             // executes when HTML-Document is loaded and DOM is ready
 
             // breakpoint and up
-            $(window).resize(function() {
+            $(window).resize(function () {
                 if ($(window).width() >= 980) {
 
                     // when you hover a toggle show its dropdown menu
-                    $(".navbar .dropdown-toggle").hover(function() {
+                    $(".navbar .dropdown-toggle").hover(function () {
                         $(this).parent().toggleClass("show");
                         $(this).parent().find(".dropdown-menu").toggleClass("show");
                     });
 
                     // hide the menu when the mouse leaves the dropdown
-                    $(".navbar .dropdown-menu").mouseleave(function() {
+                    $(".navbar .dropdown-menu").mouseleave(function () {
                         $(this).removeClass("show");
                     });
 
@@ -392,10 +301,10 @@
     <!-- New on Awolc Tab -->
     <script>
         $('.nav-tabs-dropdown')
-            .on("click", "li:not('.active') a", function(event) {
+            .on("click", "li:not('.active') a", function (event) {
                 $(this).closest('ul').removeClass("open");
             })
-            .on("click", "li.active a", function(event) {
+            .on("click", "li.active a", function (event) {
                 $(this).closest('ul').toggleClass("open");
             });
     </script>
@@ -409,7 +318,7 @@
 
     <!-- Modal Video -->
     <script language="JavaScript">
-        $(".VideoPopup").on('hidden.bs.modal', function(e) {
+        $(".VideoPopup").on('hidden.bs.modal', function (e) {
             $(".VideoPopup iframe").attr("src", $(".VideoPopup iframe").attr("src"));
         });
     </script>
